--- a/app/assets/stylesheets/office/custom.css.sass
+++ b/app/assets/stylesheets/office/custom.css.sass
@@ -1,4 +1,3 @@
-@import 'activo/mixins.sass'
 
 /*============= table cell alignments */
 .table
@@ -274,7 +273,7 @@ form.formtastic ul.errors
 #search .search_submit
   border: 0px
   border-left: 1px solid #c1c1c1
-  background: url('../../images/search-button.png') no-repeat
+  background: url('/images/search-button.png') no-repeat
   position: absolute
   left: 139px
   height: 25px
