using sass @import must fully specify import file to ensure it gets processed at compilation time, @charset must have "UTF-8" and not 'UTF-8'

--- a/app/assets/stylesheets/office/main.css.scss
+++ b/app/assets/stylesheets/office/main.css.scss
@@ -1,4 +1,5 @@
-@charset 'UTF-8';
-@import 'office/first';
-@import "office/activo/activo";
-@import "office/custom";
+@charset "UTF-8";
+@import 'activo/mixins.css.sass';
+@import 'first.css.scss';
+@import "activo/style.css.sass";
+@import "last.css.sass";
