--- a/app/assets/stylesheets/office/activo/_mixins.css.sass
+++ b/app/assets/stylesheets/office/activo/_mixins.css.sass
@@ -1,3 +1,5 @@
+@charset "UTF-8"
+
 // exemplo: text-shadow(#333, 1px, 1px, 1)
 @mixin text-shadow($color, $x, $y, $blur)
   text-shadow: $color $x $y #{$blur}px
