--- a/app/views/layouts/uk_site.html.haml
+++ b/app/views/layouts/uk_site.html.haml
@@ -9,7 +9,7 @@
     %meta{:content => "The Human Awareness Institute (HAI) empowers individuals to be potent, loving, contributing human beings. HAI promotes personal growth and social evolution by replacing ignorance and fear with awareness and love.", :name => "description"}
     %link{href: "/favicon-uk.ico", rel: "shortcut icon"}
     = stylesheet_link_tag 'public_signup/uk/main'
-    = javascript_include_tag "application"
+    = javascript_include_tag "public_signup"
     = csrf_meta_tag
   %body
     #main
