--- a/app/views/office/site_defaults/index.html.haml
+++ b/app/views/office/site_defaults/index.html.haml
@@ -1,5 +1,5 @@
 .block
-  = block_navigation([['Site Defaults', :index]])
+  = block_navigation(site_defaults_navigation)
 
   .content
     - if super_user?
