latest gems, including rails 3.2.2. reworked notifier.

--- a/app/views/office/events/_form.html.haml
+++ b/app/views/office/events/_form.html.haml
@@ -9,5 +9,5 @@
     = input_for_event_email(f, EventEmail::PENDING)
     = input_for_event_email(f, EventEmail::APPROVED)
   .wat-cf
-  = f.buttons
+  = f.actions
 .wat-cf
