--- a/app/views/public_signups/de/new.html.haml
+++ b/app/views/public_signups/de/new.html.haml
@@ -25,5 +25,5 @@
     .instructions= _('public_signup.form.conditions')
     = f.input :terms_and_conditions, options_for_terms_and_conditions(f)
 
-  = f.buttons
+  = f.actions
 
