dont reference .css in import statements; they dont find the matched file in production mode.

--- a/app/assets/stylesheets/office/application.css.scss
+++ b/app/assets/stylesheets/office/application.css.scss
@@ -1,5 +1,5 @@
 // bootstrap configured jquery-ui theme
-@import 'jquery-ui-1.8.16.custom.css';
+@import 'jquery-ui-1.8.16.custom';
 @import 'bootstrap';
 @import 'bootstrap-responsive';
 
