--- a/app/views/layouts/team/application.html.haml
+++ b/app/views/layouts/team/application.html.haml
@@ -1,37 +1,21 @@
 !!! Strict
-%html{:lang => "en", :xmlns => "http://www.w3.org/1999/xhtml"}
+%html
   %head
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
-    %title= @title || "HAI #{Site.name.upcase} System"
+    %title= @title || "HAI #{Site.name.upcase} Team System"
     %link{:href => "/favicon-#{Site.name}.ico", :rel => "shortcut icon"}/
     = stylesheet_link_tag "office/application"
     = javascript_include_tag 'office/application'
     = csrf_meta_tag
-    - if Site.uk?
-      :css
-        #header {
-          background-image: url('/images/uk/logo-big.png');
-          background-repeat: no-repeat;
-          background-position: 0 0;
-          -webkit-background-size: 100% 100%;
-          -moz-background-size: 100% 100%;
-          -o-background-size: 100% 100%;
-          background-size: 100% 100%;
-        }
-        #header, .secondary-navigation {
-          background-color: #{"#" + Site.theme_color};
-        }
-        #main-navigation ul li, .secondary-navigation ul li {
-          background: #{"#" + Site.theme_color_lighter};
-        }
     = yield :head
   %body
     .navbar
       .navbar-inner
         .container-fluid
-          %a.brand HAI #{Site.name.upcase}
+          %a.brand HAI #{Site.name.upcase} Team
           = tabs
-          = link_to_logout(destroy_staff_session_path)
+          = link_to_logout(destroy_team_session_path)
+
 
     .container-fluid
       .flashes
