--- a/app/views/office/angels/map.html.haml
+++ b/app/views/office/angels/map.html.haml
@@ -1,3 +1,6 @@
 .block
-  = render '/office/shared/map', :map => @map, :height => '400px'
+  - if @json != "[]"
+    = gmaps(markers: { data: @json, options: { do_clustering: true, randomize: false, clusterer_maxZoom: 10 } })
+  - else
+    = no_angels_on_map
   = render 'filter'
