add clothing talk & reg fee paid to pending/waitlist reports for uk

--- a/app/views/office/public_signups/index.html.haml
+++ b/app/views/office/public_signups/index.html.haml
@@ -5,4 +5,4 @@
       pending approval
 
     - if public_signups.count > 0
-      = render 'pending', :pending => public_signups
+      = render 'public_signup_list', public_signups: public_signups
