rack::deflator & jquery & jquery-ui on google cdn

--- a/app/views/layouts/office/application.html.haml
+++ b/app/views/layouts/office/application.html.haml
@@ -5,6 +5,8 @@
     %title= @title || "HAI #{Site.name.upcase} System"
     %link{:href => "/favicon-#{Site.name}.ico", :rel => "shortcut icon"}/
     = stylesheet_link_tag "office/application"
+    %script{src:"//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
+    %script{src:"//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"}
     = javascript_include_tag 'office/application'
     = csrf_meta_tag
     - if Site.uk?
