--- a/app/views/layouts/de_site.html.haml
+++ b/app/views/layouts/de_site.html.haml
@@ -11,6 +11,7 @@
     :javascript
       window["_GOOG_TRANS_EXT_VER"] = "1"
     = stylesheet_link_tag 'public_signup/de/main'
+    %script{src:"//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
     = javascript_include_tag "public_signup"
     = csrf_meta_tag
   %body
