--- a/app/views/public_signups/de/_registration_form.html.haml
+++ b/app/views/public_signups/de/_registration_form.html.haml
@@ -4,6 +4,7 @@
   = r.semantic_fields_for :angel do |a|
     = a.input :first_name,  :input_html => {:size => 20}
     = a.input :last_name,   :input_html => {:size => 20}
+    .instructions= _('public_signup.form.gender')
     = a.input :gender, options_for_gender(a)
     = a.input :email,   :input_html => {:size => 30}
     = a.input :address,   :input_html => {:size => 30}
