--- a/app/views/office/registrations/_show_others.html.haml
+++ b/app/views/office/registrations/_show_others.html.haml
@@ -22,3 +22,19 @@
       %tr
         %th Fee Received
         %td= registration.reg_fee_received
+
+- if Site.uk?
+  %table.table.table-key-values
+    %caption
+      %h6 Highest Workshop Information
+    %tbody
+      %tr
+        %th Highest Level
+        %td= registration.highest_level
+      %tr
+        %th Location
+        %td= registration.highest_location
+      %tr
+        %th Date
+        %td= registration.highest_date
+
