--- a/app/views/public_signups/uk/_registration_form.html.haml
+++ b/app/views/public_signups/uk/_registration_form.html.haml
@@ -23,3 +23,8 @@
 
   = r.input :how_hear, options_for_how_hear(r)
   = r.input :previous_event, options_for_previous_event(r)
+
+  .instructions= _('public_signup.form.previous_workshop.instructions')
+  = r.input :highest_level, label: _('public_signup.form.previous_workshop.highest_level'), input_html: {:size => 5}
+  = r.input :highest_location, label: _('public_signup.form.previous_workshop.highest_location'),  input_html: {:size => 30}
+  = r.input :highest_date, label: _('public_signup.form.previous_workshop.highest_date'), input_html: {:size => 20}
