--- a/app/views/office/registrations/_counts.html.haml
+++ b/app/views/office/registrations/_counts.html.haml
@@ -1,4 +1,5 @@
-- if Site.de?
-  = render 'office/registrations/de/counts', :registrations => registrations
-- elsif Site.uk?
-  = render 'office/registrations/uk/counts', :registrations => registrations
+.row-fluid
+  - if Site.de?
+    = render 'office/registrations/de/counts', :registrations => registrations
+  - elsif Site.uk?
+    = render 'office/registrations/uk/counts', :registrations => registrations
