--- a/app/views/office/registrations/_form.html.haml
+++ b/app/views/office/registrations/_form.html.haml
@@ -1,9 +1,9 @@
-= simple_form_for [:office, parent, registration], html: {class: 'form-horizontal'} do |r|
+= simple_form_for [:office, parent.ar_object, registration], html: {class: 'form-horizontal'} do |r|
   -if registration.errors.any?
     #error_explanation
       %h3= "#{pluralize(registration.errors.count, "error")} prohibited this registration from being saved"
 
-  - if have_event?
+  - if parent.event
     = r.association :angel, options_for_angel_select(r)
   - else
     = r.association :event, options_for_signup_events_select(r)
@@ -19,6 +19,7 @@
 
   = r.input :checked_in
   = r.input :completed
+  = r.input :cost
 
   .form-actions
     = r.button :submit, class: 'btn-primary'
