--- a/app/views/office/registrations/new.html.haml
+++ b/app/views/office/registrations/new.html.haml
@@ -1,5 +1,5 @@
 .block
   .content
-    %h2 New registration for #{parent.display_name}
+    %h2 New registration for #{parent.ar_object.display_name}
 
     = render 'form'
