--- a/app/views/office/public_signups/_form.html.haml
+++ b/app/views/office/public_signups/_form.html.haml
@@ -13,7 +13,7 @@
 
     = render 'office/registrations/fields_payment', :form => r
     = render 'office/registrations/fields_requests', :form => r
-    = render 'office/registrations/fields_highest_level', :form => r
+    = render 'office/registrations/fields_highest_level', :form => r if Site.uk?
     = render 'office/registrations/field_note', :form => r
 
   .form-actions
