--- a/app/views/office/registrations/_registration.html.haml
+++ b/app/views/office/registrations/_registration.html.haml
@@ -1,3 +1,4 @@
 = render 'office/angels/angel', :angel => registration.angel
 = render 'office/registrations/show_payment', :registration => registration
 = render 'office/registrations/show_others', :registration => registration
+= render 'office/registrations/show_payments', :registration => registration
