--- a/app/views/office/registrations/payments.html.haml
+++ b/app/views/office/registrations/payments.html.haml
@@ -1,4 +1,4 @@
 .block
   .content
     %h2 #{event.display_name} Payments
-    = render 'list_type', list: 'payments_list', registrations: registrations
+    = render 'list_type', list: 'payments_list', registrations: registrations, non_registrations: non_registrations
