--- a/app/views/office/registrations/index.html.haml
+++ b/app/views/office/registrations/index.html.haml
@@ -1,4 +1,4 @@
 .block
   .content
     %h2 #{event.display_name} Attendance
-    = render 'list_type', list: 'attendance_list', registrations: registrations
+    = render 'list_type', list: 'attendance_list', registrations: registrations, non_registrations: non_registrations
