add gravatar display to angel list

--- a/app/views/office/angels/_angel.html.haml
+++ b/app/views/office/angels/_angel.html.haml
@@ -4,7 +4,9 @@
   %tbody
     %tr
       %th Name
-      %td= angel.full_name
+      %td
+        = angel.full_name
+        = gravatar_image(angel.gravatar)
     %tr
       %th Gender
       %td= angel.gender
