--- a/app/views/public_signups/uk/_registration_form.html.haml
+++ b/app/views/public_signups/uk/_registration_form.html.haml
@@ -1,5 +1,6 @@
 = r.inputs do
   = r.input :event, options_for_public_signup_events_select(r)
+  = r.input :role, options_for_role(r)
 
   = r.semantic_fields_for :angel do |a|
     = a.input :first_name,  :input_html => {:size => 20}
