--- a/app/views/office/registrations/_show_others.html.haml
+++ b/app/views/office/registrations/_show_others.html.haml
@@ -3,6 +3,9 @@
     %h6 Other Registration Information
   %tbody
     %tr
+      %th Role
+      %td= registration.role
+    %tr
       %th Special Requests
       %td= registration_requests(registration)
     %tr
