team office report

--- a/app/assets/stylesheets/office/application.css.scss
+++ b/app/assets/stylesheets/office/application.css.scss
@@ -3,6 +3,7 @@
 @import 'bootstrap';
 @import 'bootstrap-responsive';
 @import 'gmaps4rails';
+@import 'tablesorter';
 
 body {
   background-color: #eee;
