rearrange site defaults
cut down contents of Site class and move into database via SiteDefaults.

--- a/app/views/layouts/office/application.html.haml
+++ b/app/views/layouts/office/application.html.haml
@@ -21,10 +21,10 @@
           background-size: 100% 100%;
         }
         #header, .secondary-navigation {
-          background-color: #{"#" + Site.theme_color};
+          background-color: #d6af2e;
         }
         #main-navigation ul li, .secondary-navigation ul li {
-          background: #{"#" + Site.theme_color_lighter};
+          background: #e7cf84;
         }
     = yield :head
   %body
