ensure currency is displayed in site specific format (independent of language)

--- a/app/views/office/payments/_payment.html.haml
+++ b/app/views/office/payments/_payment.html.haml
@@ -18,4 +18,4 @@
           %td= payment.note
         %tr
           %th Amount
-          %td= number_to_currency payment.amount
+          %td= local_currency payment.amount
