--- a/app/views/office/payments/_summary.html.haml
+++ b/app/views/office/payments/_summary.html.haml
@@ -7,10 +7,10 @@
       %tbody
         %tr
           %th Cost
-          %td.qty= number_to_currency r.cost
+          %td.qty= local_currency r.cost
         %tr
           %th Paid
-          %td.qty= number_to_currency r.paid
+          %td.qty= local_currency r.paid
         %tr
           %th Owes
-          %td.qty= number_to_currency r.owed
+          %td.qty= local_currency r.owed
