--- a/app/views/office/registrations/_payments_list.html.haml
+++ b/app/views/office/registrations/_payments_list.html.haml
@@ -13,11 +13,11 @@
         - registrations.by_first_name.each do |r|
           %tr
             %td.name= link_to_show(office_registration_payments_path(r), r.full_name)
-            %td.qty= number_to_currency r.cost
-            %td.qty= number_to_currency r.paid
-            %td.qty{class: r.owed > 0 ? 'owes':''}= number_to_currency r.owed
+            %td.qty= local_currency r.cost
+            %td.qty= local_currency r.paid
+            %td.qty{class: r.owed > 0 ? 'owes':''}= local_currency r.owed
         %tr
           %td Total
-          %td.qty= number_to_currency registrations.map(&:cost).inject(&:+)
-          %td.qty= number_to_currency registrations.map(&:paid).inject(&:+)
-          %td.qty= number_to_currency registrations.map(&:owed).inject(&:+)
+          %td.qty= local_currency registrations.map(&:cost).inject(&:+)
+          %td.qty= local_currency registrations.map(&:paid).inject(&:+)
+          %td.qty= local_currency registrations.map(&:owed).inject(&:+)
