add registration code support for events and registrations

--- a/app/views/office/events/_event.html.haml
+++ b/app/views/office/events/_event.html.haml
@@ -14,6 +14,9 @@
     %tr
       %th Level
       %td= event.level
+    %tr
+      %th Next Registration Code
+      %td= event.next_registration_code
 
 - categories = EventEmail::CATEGORIES.select {|category| event.find_event_email(category) }
 - if categories.any?
