--- a/app/views/office/events/_form.html.haml
+++ b/app/views/office/events/_form.html.haml
@@ -3,6 +3,7 @@
   = f.input :start_date, :as => :string, input_html: {class: 'date-pick'}, :format => '%d.%m.%Y'
   = f.input :category, options_for_event_categories(f)
   = f.input :level
+  = f.input :next_registration_code, hint: 'If supplied, auto-incremented for each registration.'
   = input_for_event_email(f, EventEmail::SIGNUP)
   = input_for_event_email(f, EventEmail::PENDING)
   = input_for_event_email(f, EventEmail::APPROVED)
