--- a/app/views/office/registrations/_fields_payment.html.haml
+++ b/app/views/office/registrations/_fields_payment.html.haml
@@ -1,3 +1,4 @@
+= form.input :registration_code, :input_html => {:size => 10}
 = form.input :payment_method, options_for_payment_method(form, :translate => false)
 = form.input :bank_account_name,  :input_html => {:size => 30}
 = form.input :bank_account_nr,  :input_html => {:size => 10}
