--- a/app/views/office/registrations/_bank_accounts.html.haml
+++ b/app/views/office/registrations/_bank_accounts.html.haml
@@ -7,9 +7,8 @@
       %th Code
       %th Pay. Meth
       %th Acc. Name
-      %th Acc. Number
-      %th Bank Name
-      %th Bank BLZ
+      %th IBAN
+      %th BIC
       %th
   %tbody
     - registrations.by_first_name.each do |r|
@@ -17,7 +16,6 @@
         %td.name= link_to_show(office_event_registration_path(r.event, r), r.full_name)
         %td= r.registration_code
         %td= r.payment_method
-        %td= r.bank_account_name
-        %td= r.bank_account_nr
-        %td= r.bank_name
-        %td= r.bank_sort_code
+        %td= [r.bank_account_name, r.bank_name].compact.join(' / ')
+        %td= r.iban
+        %td= r.bic
