--- a/app/views/office/events/_event.html.haml
+++ b/app/views/office/events/_event.html.haml
@@ -17,6 +17,12 @@
     %tr
       %th Next Registration Code
       %td= event.next_registration_code
+    %tr
+      %th Participant Cost
+      %td= event.participant_cost
+    %tr
+      %th Team Cost
+      %td= event.team_cost
 
 - categories = EventEmail::CATEGORIES.select {|category| event.find_event_email(category) }
 - if categories.any?
