--- a/app/views/office/registrations/_bank_accounts.html.haml
+++ b/app/views/office/registrations/_bank_accounts.html.haml
@@ -5,6 +5,7 @@
     %tr
       %th.name Name
       %th Code
+      %th Cost
       %th Pay. Meth
       %th Acc. Name
       %th IBAN
@@ -15,6 +16,7 @@
       %tr
         %td.name= link_to_show(office_event_registration_path(r.event, r), r.full_name)
         %td= r.registration_code
+        %td.qty= local_currency r.cost
         %td= r.payment_method
         %td= [r.bank_account_name, r.bank_name].compact.join(' / ')
         %td= r.iban
